# sample-custom-vcpkg-dependency

./: CMakeLists.txt  README.md  libdependencyConfig.cmake.in
src/dependency/: dependency.cpp  dependency.hpp  dependency_export.hpp
